# 3dtosvg

./: .gitignore  README.md  gptversion.py  pyproject.toml
examples/: cube.stl  triangles.mtl  triangles.stl
src/obj2svg/: __init__.py  cli.py  converter.py  geometry.py  layout.py  text.py
src/stl2svg/: __init__.py  core.py  export.py  layout.py  paging.py  processor.py
tests/: test_converter.py  test_core.py
